# phdata-ml-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflow/: ci.yml
notebooks/: endpoint_invocation.ipynb  experiments.ipynb
provided_files/: create_model.py
src/components/data_ingestion/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/components/data_ingestion/src/house_pricing/data_ingestion/: __init__.py  constants.py  data_ingestor.py  ingest.py  utils.py
src/components/data_ingestion/tests/: test_data_ingestor.py  test_ingestion_utils.py
src/components/model_inference/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/components/model_inference/src/house_pricing/model_inference/: app.py  model_handler.py  run_server.py  schemas.py
src/components/model_inference/tests/: test_app.py
src/components/model_training/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/components/model_training/src/house_pricing/model_training/: __init__.py  eval.py  knn_trainer.py  lgbm_trainer.py  train.py  utils.py
src/components/model_training/tests/: test_eval.py  test_knn_trainer.py  test_lgbm_trainer.py  test_utils.py
